--- a/style.css
+++ b/style.css
@@ -1,25 +1,44 @@
+*{padding: 0px;margin: 0px;}
 .header{
 width: 600px;
-height: 100px;
 background-color:greenyellow;
 padding-top: 20px;
 padding-bottom: 20px;
 }
 .menu{
     width: 600px;
-    height: 70px;
-    background-color: pink;
-    margin: 20px;
-       
+    background-color: pink;      
 }
+.menu ul{
+    list-style: none;
+}
+.menu ul li{
+    display: inline;
+    border-right: 1px solid black;
+}
+.menu ul li:last-child{
+    border-right: none;
+}
+.menu ul li a{text-decoration: none;
+padding: 10px 15px;
+display: inline-block;
+transition: 1s;
+}
+.menu ul li a:hover{
+    background: blueviolet;
+    color: #fff;
+}
+
 
 .mainconter{
     width:600px;
-    height:300px;
-    background-color:green;
+    background-color:skyblue;
+}
+.mainconter p{
+    padding: 10px;
+    text-align: justify;
 }
 .footer{
   width: 600px;
-  height: 50px;
   background-color:plum ;  
 }
